--- a/SD.html
+++ b/SD.html
@@ -7,7 +7,7 @@
  
     <style>
         body {
-            background-color: #00FF00; /* 綠底 */
+            background-color: #F0FFFF; /* 淡蓝色 */
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -57,6 +57,8 @@
 
         <!-- 標籤頁 -->
         <div class="menu">
+            <span>請選擇</span>
+            <span class="arrow">&#x21E8;</span>
             <div class="menu-item" onclick="showPage('home')">首頁</div>
             <div class="menu-item" onclick="showPage('control')">設備控制</div>
             <div class="menu-item" onclick="showPage('settings')">設定</div>
@@ -75,7 +77,8 @@
                     <style>
                         body {
                             font-family: Arial, sans-serif;
-                            background-color: #CCCCCC; /* 灰底 */
+                            
+                         background-color: #F0FFFF; /* 淡蓝色 */
                             color: #000000; /* 黑色字体 */
                             text-align: center;
                         }
@@ -201,3 +204,5 @@
     </script>
 </body>
 </html>
+
+
