--- a/SD.html
+++ b/SD.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JP-SD 中和國小清新空氣監控</title>
+    <title>JP-SD 基隆中和國小清新空氣監控</title>
  
     <style>
         body {
@@ -53,7 +53,7 @@
  
     <div class="container">
         <!-- 選頁程式標題 -->
-        <h1 class="page-title">JP-SD 中和國小清新空氣監控</h1>
+        <h1 class="page-title">JP-SD 基隆中和國小清新空氣監控</h1>
 
         <!-- 標籤頁 -->
         <div class="menu">
