--- a/SD.html
+++ b/SD.html
@@ -106,8 +106,8 @@
                         <p> <span>  <h3 class="flashing-text orange-text">CO<sub>2</sub>: 1170 ppm</h3></span></p>
                         <p>警告值設定:</p>
                         <p class="blue-text">HI: 50 μg/m<sup>3</sup></p>
-                        <p class="blue-text">Hi: 1000 ppm</p>
-                        <p>二氧化碳: 1170 ppm 比設定值1000ppm高一些 就會顯示Hi</p>
+                        <p class="blue-text">Hi: 900 ppm</p>
+                        <p>二氧化碳: 1170 ppm 比設定值900ppm還高些 就會顯示Hi</p>
                         <p>下面顯示Hi 就代表值偏高就必須打開空調囉。保護學童的健康</p>
                     </body>
                     </html></p>
